--- a/package.json
+++ b/package.json
@@ -57,11 +57,9 @@
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.1.0",
     "postcss": "^8.3.6",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^14.0.2",
+    "autoprefixer": "^10.4.4",
     "postcss-loader": "^6.1.1",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-pxtorem": "^6.0.0",
+    "cssnano": "^5.1.4",
     "prettier": "^2.4.0",
     "react-refresh": "^0.10.0",
     "style-loader": "^3.2.1",
@@ -74,19 +72,23 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.15.4",
-    "typescript": "^4.3.5",
+    "@ice/stark": "^2.7.3",
+    "@ice/stark-app": "^1.5.0",
+    "antd": "^4.19.5",
     "axios": "^0.21.1",
     "connected-react-router": "^6.9.1",
     "events": "^3.3.0",
     "immer": "^9.0.5",
     "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "typescript": "^4.3.5"
   },
   "browserslist": {
     "development": [
