--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.2",
+    "babel-plugin-import": "^1.13.3",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
+    "cssnano": "^5.1.4",
     "dotenv": "^10.0.0",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.32.0",
@@ -57,9 +60,7 @@
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.1.0",
     "postcss": "^8.3.6",
-    "autoprefixer": "^10.4.4",
     "postcss-loader": "^6.1.1",
-    "cssnano": "^5.1.4",
     "prettier": "^2.4.0",
     "react-refresh": "^0.10.0",
     "style-loader": "^3.2.1",
